--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -17,7 +17,7 @@
     "tour": "एक टूर लें",
     "inventory": "भंडार"
   },
-  "Tasks": {
+  "tasks": {
     "LG_tasks": "लिक्विड गैलेक्सी टास्क",
     "Relaunch": "शूरु करें \n    LG",
     "Reboot": "रीबूट \n  LG",
@@ -40,7 +40,7 @@
   },
   "language": {
     "name": {
-      "en": "अंग्रेज़ी (अमेरिका)",
+      "en": "अंग्रेज़ी",
       "es": "स्पैनिश",
       "hi": "हिन्दी",
       "ar": "अरबी",
@@ -57,5 +57,27 @@
       "message": "कृपया सूची में से कोई भाषा चुनें",
       "title": "भाषा चयन"
     }
+  },
+  "settings": {
+    "language": {
+      "language": "भाषा",
+      "more":"अधिक"
+    },
+    "theme": {
+      "theme": "रंग थीम",
+      "light": "दिन",
+      "dark": "अँधेरा",
+      "red": "लाल",
+      "green": "हरा",
+      "blue": "नीला"
+    },
+    "audio": {
+      "audio": "ऑडियो",
+      "aam": "ऐप ऑडियो और संगीत",
+      "tts": "पाठ का भाषण",
+      "hp": "हैप्टिक प्रतिक्रिया"
+    },
+    "fs": "फ़ॉन्ट आकार",
+    "vc": "आवाज़ से आदेश"
   }
 }
