--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -19,16 +19,18 @@
   },
   "tasks": {
     "LG_tasks": "लिक्विड गैलेक्सी टास्क",
-    "Relaunch": "शूरु करें \n    LG",
-    "Reboot": "रीबूट \n  LG",
-    "Shutdown": "बंद करें \n   LG",
-    "Logo": "साफ \n लोगो",
-    "Clean": "हटा दें \n KML",
+    "Relaunch": "शूरु करें",
+    "Reboot": "रीबूट",
+    "Shutdown": "बंद करें",
+    "Logo": "साफ लोगो",
+    "Clean": "हटा दें KML",
     "alert": "सफलता!",
+    "alert2": "आप अपने डाउनलोड फ़ोल्डर में प्रोजेक्ट के मानचित्र डेटा वाला KML पा सकते हैं",
     "alert3": "उफ़!",
+    "alert4": "प्रोजेक्ट KML को डाउनलोड करने के लिए स्टोरेज प्रबंधन अनुमतियों को सक्षम करना सुनिश्चित करें। यह भी जांचें कि आपने KML डेटा पढ़ा है",
     "alert5": "त्रुटि शुभारंभ!!",
     "alert6": "LG से कनेक्ट करने का प्रयास करते समय एक त्रुटि हुई",
-    "LGRelaunch": "एलजी को फिर से लॉन्च करें",
+    "LGRelaunch": "लॉन्च एलजीं",
     "LGReboot": "रिबूट एलजी",
     "LGShutdown": "शटडाउन एलजी",
     "sure": "क्या आप वाकई इस कार्य को करना चाहते हैं?",
@@ -79,5 +81,13 @@
     },
     "fs": "फ़ॉन्ट आकार",
     "vc": "आवाज़ से आदेश"
+  },
+  "abox": {
+    "continue": "जारी रखना",
+    "dismiss": "नकार देना"
+  },
+  "tbox": {
+    "yes": "हाँ",
+    "no": "नहीं"
   }
 }
