--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -8,6 +8,7 @@
     "info": " जानकारी "
   },
   "drawer": {
+    "title": "रॉकेट लांचर\nविज़ुअलाइज़र ऐप",
     "home": "मुख्य",
     "help": "मदद",
     "about": "बारे में",
@@ -15,7 +16,8 @@
     "connection": "कनेक्शन प्रबंधक",
     "settings": "समायोजन",
     "tour": "एक टूर लें",
-    "inventory": "भंडार"
+    "inventory": "भंडार",
+    "exit": "बाहर"
   },
   "tasks": {
     "LG_tasks": "लिक्विड गैलेक्सी टास्क",
