--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -91,5 +91,23 @@
   "tbox": {
     "yes": "हाँ",
     "no": "नहीं"
+  },
+  "connection": {
+    "title": "कनेक्शन प्रबंधक",
+    "label_l1": "रॉकेट लॉन्चर ऐप",
+    "label_l2": "लिक्विड गैलेक्सी रिग का उपयोग करना",
+    "status": "स्थति: ",
+    "connected": "योजित ",
+    "disconnected": "वियोजित ",
+    "mmu": "मास्टर मशीन उपयोगकर्ता नाम",
+    "mmip": "मास्टर मशीन आईपी पता",
+    "mmpn": "मास्टर मशीन पोर्ट नंबर",
+    "mmp": "मास्टर मशीन पासवर्ड",
+    "number": "एलजी रिग में कुल मशीनें",
+    "connect": "जोड़ना",
+    "alert": "जुड़े हुए!",
+    "alert2": "मेजबान उपलब्ध है",
+    "alert3": "उफ़!",
+    "alert4": "मेजबान उपलब्ध नहीं है। जांचें कि क्या दी गई जानकारी सही है और क्या मेजबान तक पहुंचा जा सकता है"
   }
 }
