--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -109,5 +109,14 @@
     "alert2": "मेजबान उपलब्ध है",
     "alert3": "उफ़!",
     "alert4": "मेजबान उपलब्ध नहीं है। जांचें कि क्या दी गई जानकारी सही है और क्या मेजबान तक पहुंचा जा सकता है"
+  },
+  "help": {
+    "title": "मदद",
+    "h1": "विज़ुअलाइज़ेशन स्थापित करने के निर्देश:",
+    "h1des": "1. सबसे पहले, कनेक्शन प्रबंधक पर जाएँ, जो मेनू में पाया जा सकता है, और क्रेडेंशियल्स भरें। उदाहरणों का उल्लेख वहां प्लेसहोल्डर्स के रूप में किया गया है।\n2. इसके बाद लॉन्च लिस्ट टैब पर जाएं और उस मिशन पर टैप करें, जिसकी आप कल्पना करना चाहते हैं। फिर 'रेडी टू विज़ुअलाइज़' टोस्ट संदेश के प्रकट होने की प्रतीक्षा करें\n    'एलजी में विज़ुअलाइज़ करें' बटन दबाएं। आप लिक्विड गैलेक्सी रिग में वांछित दृश्य देखने में सक्षम होंगे।\n3. आप मैप टैब से एलजी के माध्यम से नेविगेट कर सकते हैं, 'इन्फो टैब' से आइकन और रंगीन बहुभुज के बारे में जान सकते हैं, और साफ कर सकते हैं\n   मेनू से 'एलजी टास्क' की मदद से विज़ुअलाइज़ेशन।",
+    "h2": "Troubleshooting:",
+    "h2des": "1. यदि आप एलजी रिग से कनेक्ट नहीं कर सकते हैं, तो पहले सुनिश्चित करें कि वे दोनों एक ही नेटवर्क पर हैं; या तो आप कनेक्ट कर सकते हैं\n    तीसरे डिवाइस का वाईफाई या एलजी को टैबलेट के हॉटस्पॉट से कनेक्ट करें। जांचें कि क्रेडेंशियल्स सही तरीके से भरे गए हैं और पुनः प्रयास करें।\n2. एलजी (या वीएम सेटअप के मामले में होस्ट लैपटॉप) का आईपी पता खोजने के लिए, टर्मिनल में 'ifconfig' टाइप करें यदि\n   आप Mac या Linux पर हैं और Windows के लिए 'ipconfig' हैं।\n3. लो-एंड एलजी रिग्स के लिए, कभी-कभी विज़ुअलाइज़ेशन पहली बार दिखाई नहीं देता है। 'एलजी में विज़ुअलाइज़' बटन दबाएं\n    इसे हल करने के लिए एक बार और।",
+    "h3": "नक्शा नियंत्रण:",
+    "h3des": "1. LG रिग में नेविगेट करने के लिए, मैप स्क्रीन के इंटरफ़ेस का उपयोग किया जा सकता है।\\n\"\n                                  \"2. खींचने के लिए, हम मानचित्र स्क्रीन में किसी भी दिशा में एक अंगुली की गति का उपयोग कर सकते हैं।\\n\"\n                                  \"3. एक कोण पर मुड़ने के लिए, कोई दो अंगुलियों का उपयोग कर सकता है और मानचित्र स्क्रीन में एक पेंच गति प्रदान कर सकता है।\\n\"\n                                  \"4. ज़ूम करने के लिए, कोई भी स्क्रीन को पिंच कर सकता है और क्रमशः ज़ूम इन और ज़ूम आउट \\n करने के लिए उंगलियों को बाहर या अंदर की ओर ले जा सकता है। हम मैप स्क्रीन पर दिए गए + और - आइकन को दबाकर भी ज़ूम कर सकते हैं।\\n\"\n                                  \"5. झुकाने के लिए, कोई दो अंगुलियों का उपयोग कर सकता है और इसे ऊपर की दिशा में रैखिक गति दे सकता है।"
   }
 }
