--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -109,5 +109,14 @@
     "alert2": "Host is reachable",
     "alert3": "Oops!",
     "alert4": "Host is not reachable. Check if the information given is correct and if the host can be reached"
+  },
+  "help": {
+    "title": "Help",
+    "h1": "Instructions for Setting up the Visualization:",
+    "h1des": "1. First, go to Connection Manager, which can be found in the menu, and fill in the credentials. The examples are mentioned there as placeholders.\n2. Then go to the Launch List Tab and tap on the Mission you want to visualize. Wait for the 'Ready to visualize' Toast message to appear, then \n    hit the 'Visualize in LG' button. You will be able to see the desired visualization in the Liquid Galaxy Rig.\n3. You can navigate through the LG from the Map tab, learn what the icons and colored polygons stand for from the 'Info Tab', and Clean the \n   visualization with the help of 'LG Tasks' from the menu.",
+    "h2": "Troubleshooting:",
+    "h2des": "1. If you can not connect to the LG rig, first make sure they are both on the same network; either you can connect to \n    the WiFi of a third device or connect LG to the Tablet's hotspot. Check that the credentials are correctly filled in and try again.\n2. To find the IP address of the LG (or the host Laptop in case of VM setup), type 'ifconfig' in the terminal if \n    you're on Mac or Linux and 'ipconfig' for Windows.\n3. For low-end LG rigs, sometimes the visualization doesn't appear the first time. Hit the 'Visualize in LG' button \n    once more to solve this.",
+    "h3": "Map Controls:",
+    "h3des": "1. To Navigate in the LG rig, one can use the interface of the Map screen.\n2. To Drag, we can use one finger movement in any direction in the Map screen.\n3. To Twist at an angle, one can use two fingers and give a screw movement in the Map screen.\n4. To Zoom, one can pinch the screen and move the fingers outwards or inwards to zoom in and zoom out, respectively. \n     We can also zoom by pressing the + and - icons provided on the Map screen.\n5. To Tilt, one can use two fingers and give it linear movement in an upward direction."
   }
 }
