enabled language translation in on boarding and splash screen

--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -3,7 +3,7 @@
     "name": "रॉकेट लॉन्चर ऐप"
   },
   "tabs": {
-    "track": " लांच ",
+    "launch": " लांच ",
     "map": " नक्शा ",
     "info": " जानकारी "
   },
@@ -118,5 +118,11 @@
     "h2des": "1. यदि आप एलजी रिग से कनेक्ट नहीं कर सकते हैं, तो पहले सुनिश्चित करें कि वे दोनों एक ही नेटवर्क पर हैं; या तो आप कनेक्ट कर सकते हैं\n    तीसरे डिवाइस का वाईफाई या एलजी को टैबलेट के हॉटस्पॉट से कनेक्ट करें। जांचें कि क्रेडेंशियल्स सही तरीके से भरे गए हैं और पुनः प्रयास करें।\n2. एलजी (या वीएम सेटअप के मामले में होस्ट लैपटॉप) का आईपी पता खोजने के लिए, टर्मिनल में 'ifconfig' टाइप करें यदि\n   आप Mac या Linux पर हैं और Windows के लिए 'ipconfig' हैं।\n3. लो-एंड एलजी रिग्स के लिए, कभी-कभी विज़ुअलाइज़ेशन पहली बार दिखाई नहीं देता है। 'एलजी में विज़ुअलाइज़' बटन दबाएं\n    इसे हल करने के लिए एक बार और।",
     "h3": "नक्शा नियंत्रण:",
     "h3des": "1. LG रिग में नेविगेट करने के लिए, मैप स्क्रीन के इंटरफ़ेस का उपयोग किया जा सकता है।\\n\"\n                                  \"2. खींचने के लिए, हम मानचित्र स्क्रीन में किसी भी दिशा में एक अंगुली की गति का उपयोग कर सकते हैं।\\n\"\n                                  \"3. एक कोण पर मुड़ने के लिए, कोई दो अंगुलियों का उपयोग कर सकता है और मानचित्र स्क्रीन में एक पेंच गति प्रदान कर सकता है।\\n\"\n                                  \"4. ज़ूम करने के लिए, कोई भी स्क्रीन को पिंच कर सकता है और क्रमशः ज़ूम इन और ज़ूम आउट \\n करने के लिए उंगलियों को बाहर या अंदर की ओर ले जा सकता है। हम मैप स्क्रीन पर दिए गए + और - आइकन को दबाकर भी ज़ूम कर सकते हैं।\\n\"\n                                  \"5. झुकाने के लिए, कोई दो अंगुलियों का उपयोग कर सकता है और इसे ऊपर की दिशा में रैखिक गति दे सकता है।"
+  },
+  "on_board": {
+    "app": "राकेट\nलांचर\nअनुप्रयोग",
+    "title": "आपका स्वागत है !",
+    "h1": "लिफ्टऑफ के लिए तैयार हैं? पूरी तरह से विस्फोट करें\nहमारे रॉकेट लॉन्चर ऐप के साथ नया स्तर!",
+    "h2": "में SpaceX से किसी भी लॉन्च इवेंट की कल्पना करें\nशानदार नयनाभिराम वस्तुतः वास्तविक दृश्य का उपयोग करना\nलिक्विड गैलेक्सी रिग्स और गूगल मैप्स"
   }
 }
