--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "name": "Rocket Launcher App"
   },
   "tabs": {
-    "track": " Launch ",
+    "launch": " Launch ",
     "map": " Map ",
     "info": " Info "
   },
@@ -118,5 +118,11 @@
     "h2des": "1. If you can not connect to the LG rig, first make sure they are both on the same network; either you can connect to \n    the WiFi of a third device or connect LG to the Tablet's hotspot. Check that the credentials are correctly filled in and try again.\n2. To find the IP address of the LG (or the host Laptop in case of VM setup), type 'ifconfig' in the terminal if \n    you're on Mac or Linux and 'ipconfig' for Windows.\n3. For low-end LG rigs, sometimes the visualization doesn't appear the first time. Hit the 'Visualize in LG' button \n    once more to solve this.",
     "h3": "Map Controls:",
     "h3des": "1. To Navigate in the LG rig, one can use the interface of the Map screen.\n2. To Drag, we can use one finger movement in any direction in the Map screen.\n3. To Twist at an angle, one can use two fingers and give a screw movement in the Map screen.\n4. To Zoom, one can pinch the screen and move the fingers outwards or inwards to zoom in and zoom out, respectively. \n     We can also zoom by pressing the + and - icons provided on the Map screen.\n5. To Tilt, one can use two fingers and give it linear movement in an upward direction."
+  },
+  "on_board": {
+    "app": "Rocket\nLauncher\nApp",
+    "title": "Welcome OnBoard !",
+    "h1": "Ready for liftoff? Blast off to a whole\nnew level with our rocket launcher app!",
+    "h2": "Visualize any launch event from SpaceX in\nspectacular panoramic virtually real view using\nLiquid Galaxy Rigs and Google Maps"
   }
 }
