--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -3,7 +3,7 @@
     "name": "Aplicación Lanzacohetes"
   },
   "tabs": {
-    "track": " Lanzamiento ",
+    "launch": " Lanzamiento ",
     "map": " Mapa ",
     "info": "Información"
   },
@@ -118,5 +118,11 @@
     "h2des": "1. Si no puede conectarse a la plataforma LG, primero asegúrese de que ambos estén en la misma red; o puedes conectarte a\n    el WiFi de un tercer dispositivo o conectar LG al punto de acceso de la Tablet. Compruebe que las credenciales estén correctamente cumplimentadas y vuelva a intentarlo.\n2. Para encontrar la dirección IP del LG (o la computadora portátil host en caso de configuración de VM), escriba 'ifconfig' en el terminal si\n   estás en Mac o Linux y 'ipconfig' para Windows.\n3. Para equipos LG de gama baja, a veces la visualización no aparece la primera vez. Presiona el botón 'Visualizar en LG'\n    una vez más para resolver esto.",
     "h3": "Controles de mapa:",
     "h3des": "1. Para navegar en el equipo LG, se puede usar la interfaz de la pantalla Mapa.\\n\"\n                                  \"2. Para arrastrar, podemos usar el movimiento de un dedo en cualquier dirección en la pantalla del mapa.\\n\"\n                                  \"3. Para girar en ángulo, se pueden usar dos dedos y dar un movimiento de tornillo en la pantalla del mapa.\\n\"\n                                  \"4. Para hacer zoom, se puede pellizcar la pantalla y mover los dedos hacia afuera o hacia adentro para acercar y alejar\\n, respectivamente. También podemos hacer zoom presionando los íconos + y - proporcionados en la pantalla del mapa.\\n\"\n                                  \"5. Para inclinar, uno puede usar dos dedos y darle un movimiento lineal en dirección hacia arriba."
+  },
+  "on_board": {
+    "app": "Cohete\nLanzacohetes\nAplicación",
+    "title": "Bienvenido a bordo !",
+    "h1": "¿Listo para el despegue? Despegue a un todo\n¡Nuevo nivel con nuestra aplicación lanzacohetes!",
+    "h2": "Visualiza cualquier evento de lanzamiento de SpaceX en\nespectacular vista panorámica virtualmente real utilizando\nLiquid Galaxy Rigs y Google Maps"
   }
 }
