initialized home page

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -44,7 +44,7 @@
   },
   "language": {
     "name": {
-      "en": "English (US)",
+      "en": "English",
       "es": "Spanish",
       "hi": "Hindi",
       "ar": "Arabic",
