drawer and scroll issue resolved and skeleton of inventory is added

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -130,5 +130,8 @@
     "pm": "Past\nMissions",
     "vlg": "Visualize in Liquid Galaxy",
     "dlg": "Demo"
+  },
+  "inventory": {
+    "title": "Inventory"
   }
 }
