--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -130,5 +130,8 @@
     "pm": "Misiones\npasadas",
     "vlg": "Ver en Liquid Galaxy",
     "dlg": "Demo"
+  },
+  "inventory": {
+    "title": "Inventario"
   }
 }
