--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -130,5 +130,8 @@
     "pm": "विगत\nमिशन",
     "vlg": "लिक्विड गैलेक्सी में देखें",
     "dlg": "प्रदर्शन"
+  },
+  "inventory": {
+    "title": "भंडार"
   }
 }
