--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -129,7 +129,11 @@
     "upm": "आगामी\nमिशन",
     "pm": "विगत\nमिशन",
     "vlg": "लिक्विड गैलेक्सी में देखें",
-    "dlg": "प्रदर्शन"
+    "dlg": "प्रदर्शन",
+    "mn": "मिशन\nका नाम",
+    "date": "15-06-2023",
+    "rn": "रॉकेट का नाम",
+    "ls": "लॉन्च साइट\nका नाम"
   },
   "inventory": {
     "title": "भंडार",
