--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -125,6 +125,11 @@
     "h1": "लिफ्टऑफ के लिए तैयार हैं? पूरी तरह से विस्फोट करें\nहमारे रॉकेट लॉन्चर ऐप के साथ नया स्तर!",
     "h2": "में SpaceX से किसी भी लॉन्च इवेंट की कल्पना करें\nशानदार नयनाभिराम वस्तुतः वास्तविक दृश्य का उपयोग करना\nलिक्विड गैलेक्सी रिग्स और गूगल मैप्स"
   },
+
+  "launchInfo_tab": {
+    "ytv": "वीडियो देखें"
+  },
+
   "launch_tab": {
     "upm": "आगामी\nमिशन",
     "pm": "विगत\nमिशन",
