--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -126,10 +126,6 @@
     "h2": "में SpaceX से किसी भी लॉन्च इवेंट की कल्पना करें\nशानदार नयनाभिराम वस्तुतः वास्तविक दृश्य का उपयोग करना\nलिक्विड गैलेक्सी रिग्स और गूगल मैप्स"
   },
 
-  "launchInfo_tab": {
-    "ytv": "वीडियो देखें"
-  },
-
   "launch_tab": {
     "upm": "आगामी\nमिशन",
     "pm": "विगत\nमिशन",
@@ -140,6 +136,36 @@
     "rn": "रॉकेट का नाम",
     "ls": "लॉन्च साइट\nका नाम"
   },
+
+  "launchInfo_tab": {
+    "ytv": "वीडियो देखें",
+    "mn": "टेलस्टार 19वी",
+    "date": "तारीख",
+    "rn": "रॉकेट का नाम",
+    "rn_01": "फाल्कन 9",
+    "ls": "लॉन्च साइट",
+    "ls_01": "CCAFS SLC 40",
+    "time": "समय",
+    "fn": "विमान संख्या",
+    "py": "पेलोड",
+    "py_01": "टेलस्टार 19वी",
+    "n": "राष्ट्रीयता",
+    "n_01": "कनाडा",
+    "ct": "ग्राहक",
+    "ct_01": "टेलीसैट",
+    "orb": "ग्रहपथ",
+    "orb_01": "भू-स्थिर",
+    "art": "लेख",
+    "wiki": "विकिपीडिया",
+    "img": "चित्रों",
+    "md": "मिशन विवरण",
+    "md_01": "SSL-निर्मित संचार उपग्रह को अमेरिका के ऊपर 63° पश्चिम में स्थापित करने का इरादा है। 7,075 किलोग्राम पर, यह अब तक लॉन्च किया गया सबसे भारी वाणिज्यिक संचार उपग्रह बन गया।",
+    "lsd": "लॉन्च साइट विवरण",
+    "lsfn": "केप कैनवेरल एयर फ़ोर्स स्टेशन स्पेस लॉन्च कॉम्प्लेक्स 40",
+    "lsd_01": "केप कैनवेरल एयर फ़ोर्स स्टेशन स्पेस लॉन्च कॉम्प्लेक्स 40 (SLC-40) फ़्लोरिडा में SpaceX द्वारा संचालित एक महत्वपूर्ण सुविधा है। यह विभिन्न प्रकार के मिशनों के लिए फाल्कन 9 रॉकेट लॉन्च करने के लिए समर्पित है, जिसमें उपग्रह परिनियोजन और अंतर्राष्ट्रीय अंतरिक्ष स्टेशन पुन: आपूर्ति शामिल है। स्पेसएक्स के पुन: प्रयोज्य रॉकेट प्रौद्योगिकी प्रगति में महत्वपूर्ण भूमिका निभाते हुए, एसएलसी -40 को बूस्टर लैंडिंग का समर्थन करने के लिए अपग्रेड किया गया है। यह परिसर अंतरिक्ष में लागत प्रभावी और कुशल पहुंच के लिए एक महत्वपूर्ण केंद्र के रूप में कार्य करता है",
+    "mi": "और जानकारी"
+  },
+
   "inventory": {
     "title": "भंडार",
     "rockets": "रॉकेट्स",
