--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -155,8 +155,9 @@
     "orb": "Orbit",
     "orb_01": "Geostationary",
     "art": "Article",
-    "wiki": "Wikipedia",
+    "wiki": "Wiki",
     "img": "Images",
+    "tl": "Timeline",
     "md": "Mission Description",
     "md_01": "SSL-manufactured communications satellite intended to be placed at 63° West over the Americas. At 7,075 kg, it became the heaviest commercial communications satellite ever launched.",
     "lsd": "Launch Site Description",
