--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -155,8 +155,9 @@
     "orb": "Orbita",
     "orb_01": "Geoestacionario",
     "art": "Artículo",
-    "wiki": "Wikipedia",
+    "wiki": "Wiki",
     "img": "Fotos",
+    "tl": "Cronología",
     "md": "Descripción de la misión",
     "md_01": "Satélite de comunicaciones fabricado por SSL destinado a ser colocado en 63° Oeste sobre las Américas. Con 7.075 kg, se convirtió en el satélite comercial de comunicaciones más pesado jamás lanzado.",
     "lsd": "Descripción del sitio de lanzamiento",
