--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -156,8 +156,9 @@
     "orb": "ग्रहपथ",
     "orb_01": "भू-स्थिर",
     "art": "लेख",
-    "wiki": "विकिपीडिया",
+    "wiki": "विकि",
     "img": "चित्रों",
+    "tl": "समयरेखा",
     "md": "मिशन विवरण",
     "md_01": "SSL-निर्मित संचार उपग्रह को अमेरिका के ऊपर 63° पश्चिम में स्थापित करने का इरादा है। 7,075 किलोग्राम पर, यह अब तक लॉन्च किया गया सबसे भारी वाणिज्यिक संचार उपग्रह बन गया।",
     "lsd": "लॉन्च साइट विवरण",
