--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -167,6 +167,26 @@
     "mi": "और जानकारी"
   },
 
+  "rocket_info": {
+    "rn": "रॉकेट का नाम",
+    "des": "फाल्कन 9 उपग्रहों और ड्रैगन अंतरिक्ष यान को कक्षा में विश्वसनीय और सुरक्षित परिवहन के लिए स्पेसएक्स द्वारा डिजाइन और निर्मित दो चरणों वाला रॉकेट है।",
+    "ff": "पहली उड़ान",
+    "h": "ऊंचाई",
+    "w": "वज़न",
+    "d": "व्यास",
+    "ll": "लैंडिंग पैर",
+    "fs": "प्रथम चरण",
+    "ss": "दूसरे चरण",
+    "r": "पुन: प्रयोज्य",
+    "e": "इंजन",
+    "t": "जोर",
+    "f": "ईंधन",
+    "bt": "बर्न टाइम",
+    "p_1": "प्रणोदक 1",
+    "p_2": "प्रणोदक 2",
+    "tw": "थ्रस्ट टू वेट"
+  },
+
   "inventory": {
     "title": "भंडार",
     "rockets": "रॉकेट्स",
