--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -198,5 +198,28 @@
     "all": "सभी",
     "starlink": "Starlink",
     "geo": "भू-स्थिर"
+  },
+
+  "satellite_info": {
+    "sn": "उपग्रह का नाम",
+    "ls": "लॉन्च साइट",
+    "rn": "रॉकेट का नाम",
+    "d": "तारीख",
+    "m": "द्रव्यमान",
+    "o": "कक्षा",
+    "n": "राष्ट्रीयता",
+    "c": "ग्राहक"
+  },
+
+  "starlink_info": {
+    "sn": "स्टारलिंक नाम",
+    "ls": "लॉन्च साइट",
+    "rn": "रॉकेट का नाम",
+    "d": "तारीख",
+    "n": "राष्ट्रीयता",
+    "long": "देशान्तर",
+    "lat": "अक्षांश",
+    "h": "ऊंचाई",
+    "v": "वेग"
   }
 }
