--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -221,5 +221,22 @@
     "lat": "अक्षांश",
     "h": "ऊंचाई",
     "v": "वेग"
+  },
+
+  "yt_live": {
+    "title": "YouTube Live Launch Visualizer",
+    "mn": "टेलस्टार 19वी",
+    "date": "तारीख",
+    "rn": "रॉकेट का नाम",
+    "ls": "लॉन्च साइट",
+    "time": "समय",
+    "link": "Embedded Code",
+    "code": "Paste Code Here",
+    "inst": "Instructions",
+    "inst_01": "1.    YouTube (https://www.youtube.com/) पर जाएं और <mission_name> लॉन्च लाइव वीडियो सर्च करें।",
+    "inst_02": "2.    वीडियो खोलें और फिर वीडियो पर राइट क्लिक करें। दिखाए गए अनुसार विकल्प सूची से 'कॉपी एम्बेड कोड' पर टैप करें। विकल्प संलग्न छवि में नीले रंग में घिरा हुआ है।",
+    "inst_03": "3.    अब बाईं ओर इस पेज पर इनपुट फील्ड में लिंक पेस्ट करें।",
+    "inst_04": "4.    और फिर लिक्विड गैलेक्सी रिग पर वीडियो देखने के लिए विजुअलाइज ऑन लिक्विड गैलेक्सी बटन पर क्लिक करें।",
+    "inst_05": "5.    यदि अब भी संदेह है तो वीडियो स्पष्टीकरण देखने के लिए इस लिंक पर क्लिक करें।"
   }
 }
