--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -134,7 +134,10 @@
     "mn": "मिशन\nका नाम",
     "date": "15-06-2023",
     "rn": "रॉकेट का नाम",
-    "ls": "लॉन्च साइट\nका नाम"
+    "ls": "लॉन्च साइट\nका नाम",
+    "so": "विकल्प चुनें",
+    "sd": "तारीख़ चुनें",
+    "sdr": "तिथि सीमा का चयन करें"
   },
 
   "launchInfo_tab": {
