--- a/assets/i18n/hi.json
+++ b/assets/i18n/hi.json
@@ -75,6 +75,7 @@
       "green": "हरा",
       "blue": "नीला"
     },
+    "tz": "समय क्षेत्र",
     "audio": {
       "audio": "ऑडियो",
       "aam": "ऐप ऑडियो और संगीत",
